PLT-7344 Fix responsive form alignments + wrap tooltip within Input/TextArea

--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -26,7 +26,6 @@
     cursor: text;
     font-size: 18px;
     padding: 36px 14px 20px 14px;
-    border-radius: $border-radius;
     border-bottom: $border;
     resize: none;
   }
